# UAID_OS

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.planning/: GO-LIVE-END-TO-END-ROADMAP.md  HANDOFF.json  PHASE-1-PLAN.md  SLICE-17-PLAN.md  SLICE-18-PLAN.md  SLICE-18-R4-DISCUSSION.md  SLICE-19-PLAN.md  SLICE-20-PLAN.md  SLICE-20-R5-DISCUSSION.md  SLICE-21-A5-DISCUSSION.md  SLICE-21-PLAN.md  SLICE-22-PLAN.md  SLICE-22-RISK-ACCEPTANCE-DISCUSSION.md  SLICE-23-FINDINGS-DISCUSSION.md  SLICE-23-PLAN.md  SLICE-24-OPEN-ISSUES-DISCUSSION.md  SLICE-24-PLAN.md  SLICE-25-PLAN.md  SLICE-25-RELEASE-BINDING-DISCUSSION.md  SLICE-26-CI-EVIDENCE-DISCUSSION.md  SLICE-26-PLAN.md  SLICE-27-PLAN.md  SLICE-28-CONNECTOR-DISCUSSION.md  SLICE-28-PLAN.md  SLICE-29-PLAN.md  SLICE-29-PR-EVIDENCE-DISCUSSION.md  SLICE-30-PLAN.md  SLICE-31-PLAN.md  SLICE-32-PLAN.md  SLICE-33-PLAN.md  SLICE-34-PLAN.md  SLICE-35-PLAN.md  SLICE-36-PLAN.md  SLICE-37-PLAN.md  SLICE-38-PLAN.md  SLICE-39-PLAN.md  SLICE-40-PLAN.md  SLICE-41-PLAN.md  SLICE-42-PLAN.md  SLICE-43-PLAN.md  (+11 more)
app/: audit.py  config.py  cost.py  cost_forecast.py  db.py  health.py  identity.py  main.py  tenancy.py
docs/: UAID_OS_Standalone_System_Spec_and_Intake_Standard_v1_2.md
migrations/: env.py
scripts/: bootstrap_rls_role.sql
tests/: conftest.py  reviewer_quality_support.py  test_acceptance_verifier.py  test_agents.py  test_api.py  test_approval_channel.py  test_approvals.py  test_audit.py  test_ci_evidence.py  test_classification.py  test_cost.py  test_cost_forecasts.py  (+43 more)
(+294 files in other folders)
