[project]
name = "app"
version = "0.1.0"
description = "Salim-standard AI service: FastAPI + Postgres/Redis/Chroma + Sanad provenance"
requires-python = ">=3.11,<3.12"
# Trim any line below if uv hits a resolution conflict; re-run `uv sync`.
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "pydantic>=2",
    "pydantic-settings>=2",
    "pyyaml",
    "jsonschema[format]>=4.25",
    "sqlalchemy>=2",
    "alembic",
    "asyncpg",
    "redis",
    "chromadb",
    "httpx",
    "numpy",
    "scipy",
    "anthropic",
    "openai",
    "langgraph",
]

[dependency-groups]
dev = [
    "pytest",
    "pytest-asyncio",
    "ruff",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["."]
addopts = "-q"
markers = [
    "db: DB-backed test requiring Postgres; run via `make test-db` (deselected by `make test`)",
]

[tool.ruff]
line-length = 100
